hphp/hack/test/typecheck/open_tuples/splat/tuple_splat_is_as_test_bad.php.exp
ERROR: File "tuple_splat_is_as_test_bad.php", line 5, characters 9-19:
Invalid `as` expression hint (Typing[4195])
  File "tuple_splat_is_as_test_bad.php", line 5, characters 9-19:
  The `as` operator cannot be used with a tuple type with a splat element
