hphp/hack/test/typecheck/open_tuples/splat/tuple_splat_is_as_test_bad.php
<?hh
<<file: __EnableUnstableFeatures('open_tuples', 'type_splat')>>

function test2<<<__Enforceable>> reify T as (mixed...)>(mixed $m): void {
  $m as (int, ...T);
}
